# SPDX-FileCopyrightText: 2026 The mwifiex_nl80211_test_mode authors
# SPDX-License-Identifier: GPL-2.0-only

[package]
name = "mwifiex_nl80211_test_mode"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
description = "MWIFIEX rf test tool using NL80211 test mode"

[lib]
name = "mwifiex_nl80211_test_mode"
path = "src/lib.rs"

[[bin]]
name = "mwifiex_nl_test_mode"
path = "src/main.rs"

[dependencies]
bitfield-struct = "0.12"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1.1"
neli = "0.7"
nix = { version = "0.31", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0.21"
zerocopy = "0.8"
zerocopy-derive = "0.8"

[profile.release]
strip = true
opt-level = 'z'
lto = "fat"
codegen-units = 1
